# zenscript-intelli-sense

./: .gitmodules  build.gradle.kts
src/main/java/raylras/zen/langserver/provider/: ReferencesProvider.java
tree-sitter-binding/: build.gradle.kts
tree-sitter-binding/src/main/java/treesitter/: NativeSize.java  PlatformUtils.java  TSInput.java  TSInputEdit.java  TSLogger.java  TSNode.java  TSPoint.java  TSQueryCapture.java  TSQueryMatch.java  TSQueryPredicateStep.java  TSRange.java  TSTreeCursor.java  TSWasmError.java  TreeSitterLibrary.java
tree-sitter-zenscript/: .gitignore  CMakeLists.txt  grammar.js  package-lock.json  package.json
tree-sitter-zenscript/interop/: helper.c
tree-sitter-zenscript/test/: main.c
zenscript-code-model/: build.gradle.kts
zenscript-code-model/src/main/java/raylras/zen/model/: CompilationUnit.java  Compilations.java
zenscript-code-model/src/main/java/treesitter/: NativeSizeByReference.java  PlatformUtils.java  TSInput.java  TSInputEdit.java  TSLogger.java  TSNode.java  TSPoint.java  TSQueryCapture.java  TSQueryMatch.java  TSQueryPredicateStep.java  TSRange.java  TSTreeCursor.java  TSWasmError.java  TreeSitterLibrary.java
zenscript-code-model/src/main/kotlin/raylas/zen/treesitter/: Language.kt  Node.kt  Parser.kt  Query.kt  QueryCursor.kt  Tree.kt  TreeCursor.kt  internal.kt
zenscript-language-server/src/main/java/: testjava.java
zenscript-language-server/src/main/java/raylras/zen/lsp/: ZenLanguageService.java
zenscript-language-server/src/main/java/raylras/zen/lsp/diagonsitc/: Diagnostics.java  SyntaxDiagnostic.java  (+1 more)
